# case-analysis-system

./: .gitignore
v1/: .gitignore  ARCHITECTURE.md  README.md  SYSTEM_ARCHITECTURE.md
v1/.claude/: settings.local.json
v1/.github/workflows/: deploy.yml
v1/backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
v1/backend/alembic/: env.py
v1/backend/alembic/versions/: 001_initial_schema.py  002_add_documents_table.py  1d6a9625e530_add_cost_tracking_table.py
v1/backend/app/: config.py  main.py
v1/backend/app/api/: admin.py  cases.py  documents.py  schemas.py
v1/backend/app/db/: database.py  models.py
v1/backend/app/domain/: commands.py  events.py
v1/backend/app/domain/models/: ai_cost_tracking.py
v1/backend/app/services/: __init__.py  ai_service.py  cost_tracking_service.py  export_service.py  s3_service.py  text_extraction_service.py  vision_ai_service.py
v1/frontend/: admin-costs.html  index.html  package-lock.json  package.json
v1/frontend/src/: App.tsx
v1/frontend/src/api/: client.ts
v1/frontend/src/components/document/: PdfViewer.tsx
v1/frontend/src/pages/: CaseDashboard.tsx  CasesList.tsx  DocumentDetail.tsx  Documents.tsx
v1/frontend/src/types/: index.ts
