[tool.poetry]
name = "case-analysis-backend"
version = "0.1.0"
description = "Legal case analysis system - Backend API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
redis = "^5.0.1"
celery = "^5.3.4"
langchain = "^0.1.0"
anthropic = "^0.18.0"
openai = "^1.6.0"
pgvector = "^0.2.4"
pdfplumber = "^0.10.3"
python-docx = "^1.1.0"
pytesseract = "^0.3.10"
pillow = "^10.1.0"
pymupdf = "^1.23.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.12.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
